ui fix: dark mode no image background in headers

--- a/src/components/HeaderImage.module.scss
+++ b/src/components/HeaderImage.module.scss
@@ -32,7 +32,7 @@
   height: 100%;
   object-fit: cover;
   border-radius: 12px;
-  background-color: $white;
+  background-color: var(--background-color);
   box-shadow: var(--box-shadow);
   display: flex;
   align-items: center;
